--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,12 @@
     <string name="plantas">Plantas</string>
     <string name="red">Red</string>
     <string name="yellow">Yellow</string>
+    <string name="blue">Blue</string>
+    <string name="green">Green</string>
+    <string name="orange">Orange</string>
+    <string name="purple">Purple</string>
+    <string name="teal">Teal</string>
+    <string name="lime">Lime</string>
+    <string name="brown">Brown</string>
+    <string name="Question">Name this color</string>
 </resources>
